Update the webpage
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai dbatyai@inf.u-szeged.hu

--- a/00.GETTING-STARTED.md
+++ b/00.GETTING-STARTED.md
@@ -67,7 +67,7 @@ python tools/build.py --cmake-param=CMAKE_PARAM
 python tools/build.py --profile=es5.1|es2015-subset|minimal
 ```
 
-See also the related [README.md](https://github.com/pando-project/jerryscript/blob/master/jerry-core/profiles/README.md).
+See also the related [README.md](https://github.com/jerryscript-project/jerryscript/blob/master/jerry-core/profiles/README.md).
 
 **Use (compiler-default, external) libc**
 
@@ -129,6 +129,15 @@ python tools/build.py --cpointer-32bit=on --mem-heap=1024
 
 *Note*: The heap size will be allocated statically at compile time, when JerryScript memory
 allocator is used.
+
+**To build with libfuzzer support**
+
+```bash
+CC=clang python tools/build.py --libfuzzer=on --compile-flag=-fsanitize=address --lto=off
+```
+
+Check the documentation of libfuzzer to get the runtime settings of the created fuzzer
+binary: https://llvm.org/docs/LibFuzzer.html.
 
 **To get a list of all the available buildoptions for Linux**
 
