--- a/14.EXT-REFERENCE-HANDLE-SCOPE.md
+++ b/14.EXT-REFERENCE-HANDLE-SCOPE.md
@@ -51,7 +51,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   test_handle_scope_val ();
-  jerry_gc (JERRY_GC_SEVERITY_LOW);
+  jerry_gc (JERRY_GC_PRESSURE_LOW);
 
   jerry_cleanup ();
 } /* main */
@@ -103,7 +103,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   test_handle_scope_val ();
-  jerry_gc (JERRY_GC_SEVERITY_LOW);
+  jerry_gc (JERRY_GC_PRESSURE_LOW);
 
   jerry_cleanup ();
 } /* main */
